agile-web/src/main/resources/org/headsupdev/agile/web/agile.css
@import url("common.css");

body {
    background-color: white;

    height: 100%;
}

#outerpage {
    position: absolute;
    top: 0;
    right: 0;
    height:auto;
    min-height:100%;
    width: 100%;
}

#page {
}

body {min-height: 100%;} /* for proper browsers */
*html #outerpage {height: 100%;} /* for IE */

#header1 {
    background-color: #505050;
    background: -webkit-gradient(linear, left top, left bottom, from(#6b6c6d), to(#3e403f));
    background: -moz-linear-gradient(top,  #6b6c6d,  #3e403f);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#6b6c6d', endColorstr='#3e403f');
    color: white;
    padding: 0 30px;
    height: 34px;
    overflow: hidden;
    z-index: 200;
}

#header1 a {
    font-weight: normal;
}

#header1 .headbutton {
    text-decoration: none;
    display: inline-block;

    cursor: pointer;
}

#header1 #userpanel .headbutton {
    padding: 9px 5pt;
}

#header1 .headbutton:hover {
    background-color: #7b7b7b;
    background: -webkit-gradient(linear, left top, left bottom, from(#3e403f), to(#6b6c6d));
    background: -moz-linear-gradient(top,  #3e403f, #6b6c6d );
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3e403f', endColorstr='#6b6c6d');
}

#header1 .headbutton img {
    padding-top: 2px;
}

#header2 {
    background-color: #F0F1EA;
    color: white;
    padding: 24px 30px;
}

#footer {
    position: absolute;
    bottom: 0;

    padding: 0;
    width:  100%;
    height: 130px;

    background-color: #cecfca;
    background: url(images/footer-bg.png);
    background-repeat: repeat-x;
    color: #505050;
    font-size: 9pt;
}

#footer .content {
    padding:  20px 30px;
}

#footer .description {
    position: absolute;
    bottom: 37px;
    left: 30px;
    
    line-height: 275%;
}

#footer .copyright {
    position: absolute;
    bottom: 28px;
    left: 30px;
}

#footer .headsupdev {
    position: absolute;
    right: 30px;
    bottom: 28px;
}

*html #footer {width: 100%}

#footer .note, #footer .update {
    color: red;
    text-decoration: none;
}

#mainmenu, #submenu {
    font-weight: bold;
    height: 34px;
    white-space: nowrap;
}

#mainmenu a, #submenu a {
    text-decoration: none;
    color: #545A5A;
}

#mainmenu ul, #submenu ul {
    margin: 0;
    padding: 0;
    list-style: none;
    display: inline;
}

#mainmenu li, #submenu li {
    display: inline;
    padding: 10px 15px;
}

#mainmenu {
    background-color: #dad9d7;
    background: -webkit-gradient(linear, left top, left bottom, from(#f2f0ef), to(#c1bfbe));
    background: -moz-linear-gradient(top,  #f2f0ef,  #c1bfbe);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f2f0ef', endColorstr='#c1bfbe');

    font-size: 12pt;
    padding: 10px 0;
    border-top: 1px solid lightgray;
}

#mainmenu ul {
    padding: 0 30px;
}

#submenu {
    font-size: 12pt;
    background-color: #ebecee;
    margin: 15px 30px;
    padding: 10px 0;
}

.mainmenu-item:hover, .mainmenu-item a:hover {
    background-color: white;
    background: -webkit-gradient(linear, left top, left bottom, from(#eceff6), to(#ffffff));
    background: -moz-linear-gradient(top,  #eceff6,  #ffffff);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eceff6', endColorstr='#ffffff');
}

.mainmenu-item:hover span, .mainmenu-item a:hover span {
    color: #25b6e6;
}

.submenu-item:hover, .submenu-item a:hover {
    background-color: white;
}

.submenu-item:hover span, .submenu-item a:hover span {
    color: #25b6e6;
}

.mainmenu-item-selected {
    background-color: white;
    background: -webkit-gradient(linear, left top, left bottom, from(#eceff6), to(#fff));
    background: -moz-linear-gradient(top,  #eceff6,  #ffffff);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eceff6', endColorstr='#ffffff');
}

.mainmenu-item-selected span {
    color: #1298c4;
}

#projectmenu {
    width: 300px;
    position: absolute;
    left: 30px;
    top: 82px;
    z-index: 99;

    float: right;
    background-color: #F0F1EA;
    border-left: 1px solid lightgray;
    border-right: 1px solid lightgray;
    border-bottom: 1px solid lightgray;
}

#projectmenu.up {
    height: 0;
    overflow: hidden;
}

#projectmenu.down {
    height: auto;
    overflow: hidden;
}

#projectmenu-header {
    height: auto;
    font-size: 0;
}

#projectmenu-footer {
    height: auto;
    font-size: 0;
}

#projectmenu-content {
    padding-left: 8px;
    padding-right: 8px;
    padding-bottom: 8px;

    color: #545A5A;
    font-size: 12pt;
}

#projectmenu-content .alllink, #projectmenu-content .noprojects {
    padding-left: 8px;
}

#projectmenu-content a {
    color: #545A5A;
    text-decoration: none;
    font-weight: bold;

    white-space: nowrap;
}

#projectmenu-content a:hover, #projectmenu-content a.selected {
    color: #25b6e6;
}

#projectmenu ul {
    margin: 0;
    padding: 0;
    padding-left: 10px;
    list-style: none;

    overflow: hidden;
}

#projectselect {
    position: absolute;
    left: 30px;
    top: 48px;
    font-size: 13pt;
    font-weight: bold;
    color: #545A5A;
    cursor: pointer;
}

#projectselect:hover {
    color: #25b6e6;
}

#header2 .quicksearch {
    float: right;
    margin-top: -15px;
    height: 31px;

    background: url(images/search-left.png);
    background-position: left;
    background-repeat: no-repeat;
}

#header2 .quicksearch .input {
    width: 250px;
    height: 31px;
    border: none;
    background-color: white;

    font-size: 12pt;
    margin-left: 35px;
    margin-right: -6px;

    outline: none !important;
    background: url(images/search-bg.png);
    background-repeat: repeat-x;
}

#header2 .quicksearch .submit {
    height: 31px;
    width: 51px;
    border: none;
    cursor: pointer;
    padding: 0;

    background: url(images/search-right.png);
    background-position: right;
    background-repeat: no-repeat;

    font-size: 12pt;
    vertical-align: top;
    color: #505050;
}
/* ... */

